# ECPPS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  cpp.hint
.clice/index/: project.idx
.github/: CODEOWNERS
.github/workflows/: assign-blocked.yml  auto-label.yml  cmake-multi-platform.yml  sync-diagnostics.yml
compiler/: CMakeLists.txt
compiler/ecpps/: CMakeLists.txt
compiler/ecpps/src/: main.cpp
compiler/ecpps/src/CodeGeneration/: CodeEmitter.cpp  CodeEmitter.h  Nodes.cpp  Nodes.h  PseudoAssembly.cpp  PseudoAssembly.h
compiler/ecpps/src/CodeGeneration/Emitters/: x86_64.cpp  x86_64.h
compiler/ecpps/src/CodeGeneration/Emitters/x86_64/: Opcodes.cpp  Opcodes.h
compiler/ecpps/src/Debugger/: Debugger.cpp  Debugger.h
compiler/ecpps/src/Debugger/Debuggers/: Win64.cpp  Win64.h
compiler/ecpps/src/Execution/: Constexpr.h  Context.h  ControlFlow.h  Expressions.h  IR.cpp  IR.h  NodeBase.cpp  NodeBase.h  Operations.h  Procedural.h
compiler/ecpps/src/Linker/: CoffLinker.cpp  CoffLinker.h  Linker.cpp  Linker.h  PE.cpp  PE.h  WindowsLinker.cpp  WindowsLinker.h  dllHelp.cpp  dllHelp.h
compiler/ecpps/src/Machine/: ABI.cpp  ABI.h  Machine.h  Mangling.cpp  Mangling.h  Storage.h
compiler/ecpps/src/Parsing/: AST.cpp  AST.h  ASTContext.h  Preprocessor.cpp  Preprocessor.h  SourceMap.cpp  SourceMap.h  Tokeniser.cpp  Tokeniser.h
compiler/ecpps/src/Parsing/ASTs/: General.h  Type.h
compiler/ecpps/src/Shared/: BumpAllocator.cpp  BumpAllocator.h  Config.cpp  Config.h  Diagnostics.cpp  Diagnostics.h  Error.cpp  Error.h  mimalloc.cpp  pch.h
compiler/ecpps/src/TypeSystem/: ArithmeticTypes.cpp  ArithmeticTypes.h  CompoundTypes.cpp  CompoundTypes.h  TypeBase.cpp  TypeBase.h
compiler/ecpps/src/cli/: main.cpp
compiler/platformlib/: CMakeLists.txt
compiler/platformlib/include/platformlib/: identify.h  platformlib.h
compiler/platformlib/src/: identify.cpp  pch.h  platformlib.cpp
compiler/utilitieslib/: CMakeLists.txt
compiler/utilitieslib/include/utilitieslib/: Assert.h  Numbers.h  Queue.h  RuntimeAssert.h  SBOVector.h
compiler/utilitieslib/src/: Assert.cpp  RuntimeAssert.cpp  SBOVector.cpp  pch.h
stdlib/: CMakeLists.txt
stdlib/include/: .clang-tidy  cstdio
stdlib/include/__ecpps/: sysvars.h
stdlib/runtime/: dllmain.cpp
testing/: CMakeLists.txt
testing/compiler/: CMakeLists.txt  default_15075974265245399470_0.profraw  test_compiler.cpp
testing/compiler/fixtures/: BumpAllocatorFixture.h  SourceFileFixtures.h  TestHelpers.h
testing/compiler/sources/: playground.cpp  test.h
testing/compiler/tests/e2e/: test_comprehensive.cpp
testing/compiler/tests/integration/: test_tokeniser_to_ast.cpp
testing/compiler/tests/regression/: test_pointer_arithmetic.cpp
testing/compiler/tests/unit/: test_platform_identify.cpp  test_sbo_vector.cpp  test_tokenise.cpp  test_x86_64_opcodes.cpp
testing/compiler/tests/unit/parsing/: test_tokenise.cpp
testing/compiler/tests/unit/typesystem/: test_arithmetic_types.cpp  test_type_comparison.cpp
testing/compiler/tests/unit/utilities/: test_bump_allocator.cpp  test_sbo_vector.cpp
testing/stdlib/: CMakeLists.txt
